# ai-engine

./: .env.example  .env.vps-cpu.example  .env.vps-gpu.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.llama  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: dev.yaml  (+2 more)
src/: .dockerignore  Dockerfile  Dockerfile.llama  README.md  docker-compose.llama-tunnel.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/ai_engine/: __init__.py  config.py
src/ai_engine/api/: __init__.py  app.py  diagnostics.py  events.py  limiters.py  llama_target_store.py  middleware.py  optimization.py  schemas.py
src/ai_engine/cli/: __init__.py  audit_rag_corpus.py  build_rag_index.py  demo_rag_kbd.py  demo_suite.py  evaluate_rag_quality.py
src/ai_engine/examples/: __init__.py  corpus.py  injector.py  rag_audit.py  rag_quality.py  rag_seed.py
src/ai_engine/games/: __init__.py  catalog.py  generator.py  planning.py  prompts.py  schemas.py
src/ai_engine/kbd/: __init__.py  entry.py  knowledge_base.py  persistent_kb.py  tinydb_knowledge_base.py
src/ai_engine/llm/: __init__.py  __main__.py  llama_client.py  model_manager.py
src/ai_engine/observability/: __init__.py  api.py  collector.py  middleware.py
src/ai_engine/rag/: __init__.py  chunker.py  document.py  embedder.py  pipeline.py  reranker.py  retriever.py  utils.py  vector_store.py
src/ai_engine/safety/: __init__.py  jailbreak.py
src/ai_engine/sdk/: __init__.py  languages.py  models.py
src/data/: generation_cache.json
src/distributions/: README.md
src/distributions/dev/: vps-cpu.env  vps-gpu.env  windows-gpu.env  windows.env
src/distributions/examples/: .env.example
src/distributions/pro/: vps-cpu.env  vps-gpu.env  windows-gpu.env  windows.env
src/distributions/stg/: vps-cpu.env  vps-gpu.env  windows-gpu.env  windows.env
src/notebooks/: demo_rag.backup.ipynb  demo_rag.ipynb
src/scripts/: README.md  demo_rag_kbd.py  demo_suite.py
src/scripts/benchmarks/: benchmark_generation_paths.py  benchmark_generation_quality.py  benchmark_hallucination.py
src/scripts/demos/: demo_rag_kbd.py  demo_suite.py
src/scripts/install/: configure_cloudflare_llama_tunnel.ps1  configure_vps_reverse_relay.ps1  configure_windows_public_ports.ps1  deploy.ps1  deploy.sh  install-vps-autodeploy.sh  install_vps_linux_cpu.sh  install_vps_linux_gpu.sh  install_windows.ps1  preflight_windows_gpu.ps1  smoke_test.sh  vps_tcp_relay.py
src/tests/: __init__.py  test_config.py  test_import_surfaces.py
src/tests/eval/: __init__.py  runner.py  test_eval_baseline.py
src/tests/test_api/: __init__.py  test_app.py  test_diagnostics.py  test_llama_target_store.py  test_middleware.py  test_optimization.py
src/tests/test_cli/: __init__.py  test_audit_rag_corpus.py  test_build_rag_index.py  test_demo_rag_kbd.py  test_demo_suite.py  test_evaluate_rag_quality.py
src/tests/test_examples/: test_injector.py  test_rag_audit.py  test_rag_quality.py  test_rag_seed.py
src/tests/test_games/: __init__.py  test_catalog.py  test_generator.py  test_generator_validation.py  test_hallucination_benchmark.py  test_prompts.py  test_schemas.py
src/tests/test_kbd/: __init__.py  test_entry.py  test_knowledge_base.py  test_tinydb_knowledge_base.py
src/tests/test_llm/: test_llama_client.py  test_model_manager.py
(+109 files in other folders)
