[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engine"
version = "0.1.0"
description = "AI Engine – RAG, local LLM inference and structured educational game generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "requests>=2.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=23.9.1",
    "isort>=5.12",
    "mypy>=1.5",
    "types-requests>=2.31",
    "pre-commit>=3.4",
]

rag = [
    "sentence-transformers>=2.2",
    "chromadb>=0.3"
]

kbd = [
    "tinydb>=4.7"
]

llm = [
    "llama-cpp-python>=0.2.0",
    "pyyaml>=6.0",
]

games = [
    "llama-cpp-python>=0.2.0",
    "sentence-transformers>=2.2",
]

api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
exclude = ["build", "dist", ".venv", "__pycache__", "*.ipynb"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
